tests/ui/borrowck/borrowck-init-in-called-fn-expr.stderr
error[E0381]: used binding `i` isn't initialized
  --> $DIR/borrowck-init-in-called-fn-expr.rs:4:9
   |
LL |         let i: isize;
   |             - binding declared here but left uninitialized
LL |         i
   |         ^ `i` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |         let i: isize = 42;
   |                      ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
